@@ -16,6 +16,7 @@
 	* Fixed issue #13091: Reduce Solr connection selection UI clutter
 	* Added a class tx_solr_Site to use when dealing with site information, like site root, ttile, label and so on
 	* Added method tx_solr_ConnectionManager::getConnectionsBySite()
+	* Replaced occurrences of tx_solr_Util::getSiteHash() with tx_solr_Site->getSiteHash()
 
 2011-06-11  Ingo Renner  <ingo.renner@dkd.de>
 
